# nsre

./: .gitignore  .travis.yml  Makefile  README.md  README.txt  pyproject.toml  requirements.in  requirements.txt  setup.py  travis.sh
docs/source/: ast.rst  conf.py  getting_started.rst  index.rst  lib.rst  matchers.rst  regexp.rst  shortcuts.rst
src/nsre/: __init__.py  ast.py  comparators.py  fsm.py  lib.py  matcher.py  matchers.py  regexp.py  shortcuts.py  utils.py
tests/issue_00001/: test_comparators.py  test_expressions.py  test_fsm.py  test_matcher.py  test_utils.py
tests/issue_00003/: conftest.py  test_ast.py  test_graph.py  test_regexp.py
tests/issue_00004/: test_lib.py
